--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,9 @@ CMakeLists.txt.user*
 # QtCreator 4.8< compilation database
 compile_commands.json
 
+# Ignore large model files
+asserts/model/*.pt
+
 # QtCreator local machine specific files for imported projects
 *creator.user*
 
