--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,7 @@ qt_add_qml_module(appPlantGPT
         core/sources/myhelper.cpp
         core/sources/modelrunner.h
         core/sources/modelrunner.cpp
+        QML_FILES ux/Pages/InfarenceResultPage.qml
 )
 
 # -------------------------
